--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.19.0",
     "cors": "~2.8.4",
     "express": "^4.17.1",
+    "firebase-admin": "^8.6.1",
     "optimist": "~0.6.1",
     "ws": "^7.1.2"
   },
