--- a/package.json
+++ b/package.json
@@ -35,17 +35,20 @@
     "prebuild": "npm run lint",
     "test": "npm run lint && mocha -r ts-node/register \"test/**/*\"",
     "start": "bin/peerjs --port ${PORT:=9000}",
+    "startwin": "node bin/peerjs --port 9000 --path /myapp",
     "dev:start": "npm-run-all build start",
-    "dev": "nodemon --watch src -e ts --exec npm run dev:start"
+    "dev:startwin": "npm-run-all build startwin",
+    "dev": "nodemon --watch src -e ts --exec npm run dev:start",
+    "devwin": "nodemon --watch src -e ts --exec npm run dev:startwin"
   },
   "release": {
     "branch": "master"
   },
   "dependencies": {
+    "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.6",
-    "@types/express": "^4.17.3",
+    "@types/express": "^4.17.6",
     "@types/ws": "^7.2.3",
-    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "uuid": "^3.4.0",
